# agent-transcript-collector

./: .gitignore  FOLLOWUPS.md  README.md  pyproject.toml
src/agent_transcript_collector/: app.py  catalog.py  chippy_import.py  chippy_screen.py  download.py  env.py  redactor.py  s3client.py  tui.py
src/agent_transcript_collector/sources/: __init__.py  cursor.py  pi.py
src/claude_transcript_collector/: app.py  redactor.py  scanner.py
src/claude_transcript_collector/sources/: __init__.py  base.py  claude_code.py  codex.py  pi.py
src/claude_transcript_collector/templates/: index.html
tests/: test_app.py  test_catalog.py  test_chippy_import.py  test_download.py  test_env.py  test_redactor.py  test_sources.py  test_tui.py
