[project]
name = "agent-transcript-collector"
version = "0.1.0"
description = "Collect and share AI coding-agent transcripts (Claude Code, Codex, Pi) with consent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "boto3>=1.35",
]

[project.scripts]
agent-transcript-collector = "claude_transcript_collector.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The distribution is `agent-transcript-collector` but the import package is still
# `claude_transcript_collector`, so point hatchling at it explicitly (it would
# otherwise look for a module matching the dist name).
[tool.hatch.build.targets.wheel]
packages = ["src/claude_transcript_collector"]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]
