[project]
name = "agent-transcript-collector"
version = "0.1.0"
description = "Collect and share AI coding-agent transcripts (Claude Code, Codex, Cursor, Pi) with consent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "boto3>=1.35",
]

[project.optional-dependencies]
tui = ["textual>=0.50"]
llm = ["anthropic>=0.40"]

[project.scripts]
agent-transcript-collector = "agent_transcript_collector.app:main"
agent-transcript-downloader = "agent_transcript_collector.download:main"
chippy-importer = "agent_transcript_collector.chippy_import:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "textual>=0.50",
]
